@@ -66,7 +66,11 @@
 
   <target name="compile" depends="-initialize" description="Compile everything needed for a Gant installation.">
     <mkdir dir="${buildClassesDirectory}"/>
-    <groovyc srcdir="${sourceDirectory}" destdir="${buildClassesDirectory}" classpathref="compileJarSet">
+    <groovyc srcdir="${sourceDirectory}" destdir="${buildClassesDirectory}">
+      <classpath>
+        <pathelement location="${buildClassesDirectory}"/>
+        <path refid="compileJarSet"/>
+      </classpath>
       <javac source="1.4" target="1.4" debug="on"/>
     </groovyc>
   </target>
