@@ -12,10 +12,13 @@ overful buffers.  cf. GANT-22.  Altered return type of methods so as to return t
 executed process. cf. GANT-23.
 
 Add a new tool AntFile for reading an Ant XML file and presenting all the targets as targets in a Gant file.
+
 Added a -L|--lib <directory-path> options in the same style as Ant's at the request of Adam DesJardin.
 cf. GANT-24.
 
 Added $HOME/.gant/lib as a repository of jar files as well as $HOME/.ant/lib.
+
+Amended the depends processing to deal with lists of mixed Strings and Closures.
 
 1.1.0 ( r8964 )
 ---------------
